# First_cc_project

./: .pre-commit-config.yaml  Makefile  README.md  api.py  config.yaml  data.dvc  database.csv  imagetotext.py  pyproject.toml  requirements.txt
.dvc/: config
.github/workflows/: docker.yml  tests.yml
dockerfiles/: trainer.dockerfile
docs/: mkdocs.yaml
docs/source/: index.md
first_cc_project/: __init__.py  predict_model.py  train_model.py  train_model2.py  train_modelhydra.py
first_cc_project/data/: make_dataset.py
first_cc_project/models/: model{lr}_{batch_size}_{num_epochs}.pt
models/: dockermodel.pt  model0.001_256_20.pt  model1_4_2.pt
tests/: test_data.py  test_model.py  test_train_model.py
